--- a/CODE/src/main/webapp/WEB-INF/web.xml
+++ b/CODE/src/main/webapp/WEB-INF/web.xml
@@ -10,10 +10,10 @@
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
   
-  <context-param>
-	<param-name>contextConfigLocation</param-name>
-	<param-value>classpath:applicationContext.xml</param-value>
-  </context-param>
+<!--   <context-param> -->
+<!-- 	<param-name>contextConfigLocation</param-name> -->
+<!-- 	<param-value>classpath:/WEB-INF/applicationContext.xml</param-value> -->
+<!--   </context-param> -->
 	<!-- spring listener -->
   <listener>
     <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
