--- a/.hgignore
+++ b/.hgignore
@@ -16,3 +16,8 @@ manage/.settings/
 manage/.project
 manage/.classpath
 manage/test-output/
+basecommon/target
+basecommon/.settings/org.eclipse.jdt.core.prefs
+basecommon/.settings/org.maven.ide.eclipse.prefs
+basecommon/.project
+basecommon/.classpath
