--- a/CODE/pom.xml
+++ b/CODE/pom.xml
@@ -375,6 +375,14 @@
 		  <version>0.0.1-SNAPSHOT</version>
 		</dependency>
 		
+		
+		<dependency>
+			<groupId>org.kohsuke.stapler</groupId>
+			<artifactId>json-lib</artifactId>
+			<version>2.1-rev6</version>
+		</dependency>
+
+		
 	</dependencies>
 
 	<build>
