--- a/CODE/src/main/resources/local.properties
+++ b/CODE/src/main/resources/local.properties
@@ -1,3 +1,7 @@
+jdbc.url=jdbc:mysql://localhost:3306/basedb?useUnicode=true&amp;characterEncoding=UTF-8
+jdbc.username=root
+jdbc.password=root
+
 theme.home=default/
 db.server.domain=http://localhost:8080/baseweb/
 mode.develop=false
