--- a/CODE/src/main/resources/web.properties
+++ b/CODE/src/main/resources/web.properties
@@ -1,3 +1,7 @@
+jdbc.url=jdbc:mysql://58.64.213.201:3309/basedb?useUnicode=true&amp;characterEncoding=UTF-8
+jdbc.username=basedb
+jdbc.password=baseroot
+
 theme.home=default/
 db.server.domain=http://hnxb.vxg201.10000net.cn/baseweb/
 mode.develop=false
