--- a/CODE/src/main/resources/local.properties
+++ b/CODE/src/main/resources/local.properties
@@ -6,3 +6,12 @@ theme.home=default/
 db.server.domain=http://localhost:8080/baseweb/
 mode.develop=false
 image.max.size=10240
+
+#EMAIL
+mail.smtp.host=smtp.qq.com
+mail.smtp.auth=true
+mail.smtp.timeout=25000
+mail.smtp.port=465
+mail.username=995078755@qq.com
+mail.password=13320865121
+mail.from=995078755@qq.com
