--- a/CODE/pom.xml
+++ b/CODE/pom.xml
@@ -380,6 +380,13 @@
 	      <artifactId>commons-net</artifactId>
 	      <version>3.0.1</version>
 	    </dependency>
+	    
+<!-- 		<dependency> -->
+<!-- 			<groupId>javax.mail</groupId> -->
+<!-- 			<artifactId>mail</artifactId> -->
+<!-- 			<version>1.5.0-b01</version> -->
+<!-- 		</dependency> -->
+            
             
 
 		
