--- a/CODE/src/main/resources/web.properties
+++ b/CODE/src/main/resources/web.properties
@@ -1,8 +1,8 @@
-jdbc.url=jdbc:mysql://58.64.213.201:3309/basedb?useUnicode=true&amp;characterEncoding=UTF-8
-jdbc.username=basedb
-jdbc.password=baseroot
+jdbc.url=jdbc:mysql://localhost:3306/jsp3551db0?useUnicode=true&amp;characterEncoding=UTF-8
+jdbc.username=jsp3551db0
+jdbc.password=13289549
 
 theme.home=default/
-db.server.domain=http://hnxb.vxg201.10000net.cn/baseweb/
+db.server.domain=http://3551.02hk.86linux.net/
 mode.develop=false
 image.max.size=10240
