--- a/CODE/src/main/webapp/WEB-INF/web.xml
+++ b/CODE/src/main/webapp/WEB-INF/web.xml
@@ -15,6 +15,9 @@
 <!-- 	<param-value>classpath:/WEB-INF/applicationContext.xml</param-value> -->
 <!--   </context-param> -->
 	<!-- spring listener -->
+	<listener>
+		<listener-class>com.flt.system.AppSessionListen</listener-class>
+	</listener>
   <listener>
     <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
   </listener>
