--- a/CODE/pom.xml
+++ b/CODE/pom.xml
@@ -61,6 +61,12 @@
 	
 	<dependencies>
 		<dependency>
+	    	<groupId>com.qiniu</groupId>
+	   	 	<artifactId>qiniu-java-sdk</artifactId>
+	    	<version>[7.0.0, 7.0.99]</version>
+		</dependency>
+
+		<dependency>
 			<groupId>commons-lang</groupId>
 			<artifactId>commons-lang</artifactId>
 			<version>${commons.version}</version>
